--- a/package.json
+++ b/package.json
@@ -1,22 +1,37 @@
 {
-  "name": "gulp-generator",
+  "name": "gulp",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "gulp"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "devDependencies": {
-    "gulp": "3.9.1",
-    "gulp-sass": "^5.0.0",
-    "sass": "^1.45.1",
-    "gulp-clean-css": "^4.3.0",
-    "browser-sync": "*",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "babelify": "^10.0.0",
+    "browser-sync": "^3.0.2",
+    "gulp": "^5.0.0",
+    "gulp-autoprefixer": "^9.0.0",
+    "gulp-cached": "^1.1.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^9.1.0",
+    "gulp-newer": "^1.4.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-webp": "^5.0.0",
+    "sass": "^1.77.8",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
+  },
+  "dependencies": {
     "browserify": "^17.0.0",
-    "vinyl-source-stream": "^2.0.0",
-    "gulp-to-ico": "^1.0.0",
-    "gulp-imagemin": "7.1.0"
+    "dotenv": "^16.4.5",
+    "gsap": "^3.12.5",
+    "gulp-tinify-and-convert": "^1.1.0",
+    "slick-carousel": "^1.8.1"
   }
 }
